<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ExtendWordsActivity">

    <TextView
        android:id="@+id/textv_title_hm_ew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_title_hm_ew"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ly_list_hm_ew"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/listv_list_hm_ew"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ly_buttons_hm_ew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/btn_back_hm_ew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="90dp"
            android:background="@color/colorAccent"
            android:text="@string/str_back"
            android:textColor="@color/colorWhite" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_add_hm_ew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:background="@color/colorPrimary"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/colorWhite" />
    </FrameLayout>
</LinearLayout>

