<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/textv_word_liw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEFAULTWORD"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="6dp"
        android:textSize="16dp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/imagev_word_liw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>
